...
		}
		Rule()
		TextField(
			filterValue,
			{ filterValue = it; onFilter(it.text) },
			Modifier.fillMaxWidth().padding(8.dp).focusRequester(focus),
			placeholder = { Text(prefs.text("Find class or resource", "查找类或资源")) },
			leadingIcon = { Icon(AllIconsKeys.Actions.Find, null) })
		model.file?.let { file ->
			Row(
				Modifier.height(30.dp).padding(horizontal = 12.dp),
				verticalAlignment = Alignment.CenterVertically,
				horizontalArrangement = Arrangement.spacedBy(6.dp)
...
