...
	modifier: Modifier = Modifier
) {
	var expanded by remember { mutableStateOf(false) }
	Box(modifier.padding(horizontal = 8.dp)) {
		IconButton(
			{ expanded = !expanded },
			Modifier.height(32.dp).widthIn(max = 400.dp).testTag("file-switcher")
		) {
			Row(
				Modifier.padding(horizontal = 8.dp),
				verticalAlignment = Alignment.CenterVertically,
				horizontalArrangement = Arrangement.spacedBy(8.dp)
			) {
...
				}
			}
			if (prefs.recent.isNotEmpty()) {
				separator()
				passiveItem {
					Text(
						prefs.text("Recent files", "最近打开的文件"),
						Modifier.padding(horizontal = 12.dp, vertical = 4.dp),
						color = JewelTheme.globalColors.text.info
					)
				}
				prefs.recent.forEach { path ->
					val file = File(path)
...
